Update: app/css/styles_main.css, app/js/detect_text.js, app/js/include_html.js, app/js/selector_language.js, app/pages/text.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -12,23 +12,19 @@
 
       <!-- // Row 3: Status -->
       <div class="dropdown" id="languageDropdown">
-        <div class="dropdown-select" onclick="toggleDropdown()">
+        <div class="dropdown-select" onclick="toggleDropdownLanguages()">
           Select Languages...
         </div>
-        <div class="multi-options-box">
-          <label><input type="checkbox" value="English" /> English</label>
-          <label><input type="checkbox" value="Thai" /> Thai</label>
-          <label><input type="checkbox" value="Spanish" /> Spanish</label>
-        </div>
+        <div class="multi-options-box"></div>
       </div>
 
       <!-- Row 1: Language select -->
-      <div class="row-text">
+      <!-- <div class="row-text">
         <label for="language-select" style="margin: 0">
           <select id="language-select" title="Select language">
             <option value="eng" selected>English</option>
             <option value="tha">Thai</option>
-            <!-- <option value="spa">Spanish</option>
+            <option value="spa">Spanish</option>
             <option value="fra">French</option>
             <option value="deu">German</option>
             <option value="chi_sim">Chinese (Simplified)</option>
@@ -49,10 +45,10 @@
             <option value="ron">Romanian</option>
             <option value="swe">Swedish</option>
             <option value="fin">Finnish</option>
-            <option value="hun">Hungarian</option> -->
+            <option value="hun">Hungarian</option>
           </select>
         </label>
-      </div>
+      </div> -->
 
       <div class="row-text">
         <!-- Row 2: Buttons -->
