Update: app/js/detect_text.js, app/pages/text.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -81,16 +81,16 @@
       </div>
 
       <div class="row-text">
-        <button id="btn-voice-text" type="button" onclick="voiceTexts()">
+        <!-- <button id="btn-voice-text" type="button" onclick="voiceTexts()">
           Voice
-        </button>
-        <button
+        </button> -->
+        <!-- <button
           id="btn-translate-text"
           type="button"
           onclick="translateTexts()"
         >
           Translate
-        </button>
+        </button> -->
         <button id="btn-csv-text" type="button" onclick="csvTexts()">
           CSV
         </button>
