Update: app/js/selector_language.js, app/pages/status.html, app/pages/test2.html

--- a/app/pages/status.html
+++ b/app/pages/status.html
@@ -2,7 +2,7 @@
   <div class="video-source-section">
     <div class="status-section">
       <!-- Detection Indicators -->
-      <div class="detection-indicators" style="margin-top: 10px">
+      <div class="detection-indicators">
         <span id="object-status" class="detection-status"
           >Object: <b>-</b></span
         >
