--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -10,48 +10,16 @@
         style="width: 100%; box-sizing: border-box"
       ></textarea>
 
-      <!-- // Row 3: Status -->
-      <div class="dropdown" id="languageDropdown">
+      <!-- // Row 1: Status -->
+      <div class="dropdown" id="language-dropdown">
         <div class="dropdown-select" onclick="toggleDropdownLanguages()">
           Select Languages...
         </div>
         <div class="multi-options-box"></div>
       </div>
 
-      <!-- Row 1: Language select -->
-      <!-- <div class="row-text">
-        <label for="language-select" style="margin: 0">
-          <select id="language-select" title="Select language">
-            <option value="eng" selected>English</option>
-            <option value="tha">Thai</option>
-            <option value="spa">Spanish</option>
-            <option value="fra">French</option>
-            <option value="deu">German</option>
-            <option value="chi_sim">Chinese (Simplified)</option>
-            <option value="jpn">Japanese</option>
-            <option value="rus">Russian</option>
-            <option value="ara">Arabic</option>
-            <option value="por">Portuguese</option>
-            <option value="hin">Hindi</option>
-            <option value="ita">Italian</option>
-            <option value="kor">Korean</option>
-            <option value="tur">Turkish</option>
-            <option value="vie">Vietnamese</option>
-            <option value="nld">Dutch</option>
-            <option value="ell">Greek</option>
-            <option value="heb">Hebrew</option>
-            <option value="pol">Polish</option>
-            <option value="ces">Czech</option>
-            <option value="ron">Romanian</option>
-            <option value="swe">Swedish</option>
-            <option value="fin">Finnish</option>
-            <option value="hun">Hungarian</option>
-          </select>
-        </label>
-      </div> -->
-
+      <!-- Row 2: Buttons -->
       <div class="row-text">
-        <!-- Row 2: Buttons -->
         <button id="btn-detect-text" type="button" onclick="detectTexts()">
           Detect
         </button>
@@ -61,20 +29,6 @@
         <button id="btn-copy-text" type="button" onclick="copyTexts()">
           Copy
         </button>
-        <!-- <button
-          id="btn-cut-text"
-          type="button"
-          onclick="cutTexts()"
-        >
-          Cut
-        </button>
-        <button
-          id="btn-select-text"
-          type="button"
-          onclick="selectallTexts()"
-        >
-          Select All
-        </button> -->
         <button id="btn-clear-text" type="button" onclick="clearTexts()">
           Clear
         </button>
@@ -102,8 +56,6 @@
           Spreadsheet
         </button>
       </div>
-
-      <!-- Row 1: Language select -->
 
       <!-- Row 1: Language select -->
     </div>
