--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
     <script src="app/js/selector_source.js"></script>
     <script src="app/js/selector_unit.js"></script>
     <script src="app/js/selector_language.js"></script>
+    <script src="app/js/selector_object.js"></script>
     <script src="app/js/command.js"></script>
     <script src="app/js/voice.js"></script>
     <script src="app/js/voice_command.js"></script>
