Update: app/js/detect_text.js, app/pages/mode.html, app/pages/object.html

--- a/app/pages/mode.html
+++ b/app/pages/mode.html
@@ -54,6 +54,9 @@
             />
             <span class="slider"></span>
           </label>
+          <button id="btn-folder-text" type="button" onclick="browseFolder()">
+            Folder
+          </button>
         </div>
       </div>
     </div>
