--- a/app/pages/object.html
+++ b/app/pages/object.html
@@ -10,7 +10,7 @@
         style="width: 100%; box-sizing: border-box"
       ></objectarea>
 
-      <!-- // Row 1: Status -->
+      <!-- // Row 1 -->
       <div class="dropdown" id="object-dropdown">
         <div class="dropdown-select" onclick="toggleDropdownObjects()">
           Select Objects...
@@ -18,24 +18,7 @@
         <div class="multi-options-box"></div>
       </div>
 
-      <!-- Row 1: Object select -->
-      <!-- <div class="row-object">
-        <label for="object-class-select" style="margin: 0">
-          <select
-            id="object-class-select"
-            class="object-class-select"
-            title="Select object class"
-          >
-            <option value="person" selected>Person</option>
-            <option value="car">Car</option>
-            <option value="bicycle">Bicycle</option>
-            <option value="dog">Dog</option>
-            <option value="cat">Cat</option>
-          </select>
-        </label>
-      </div> -->
-
-      <!-- Row 2: Buttons -->
+      <!-- Row 2 -->
       <div class="row-object">
         <button id="btn-detect-object" type="button" onclick="detectobjects()">
           Detect
