Update: app/pages/source.html, app/pages/text.html

--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -10,6 +10,7 @@
           <option value="stream">Stream (internet)</option>
           <option value="video">Video (file)</option>
           <option value="image" selected>Image (file)</option>
+          <!-- <option value="folder">Folder</option> -->
         </select>
       </label>
 
