Update: app/js/detect_text.js, app/pages/text.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -5,6 +5,8 @@
       <textarea
         id="texts-input"
         class="texts-input"
+        contenteditable="true"
+        spellcheck="true"
         rows="1"
         placeholder="Detected texts..."
         style="width: 100%; box-sizing: border-box"
