Update: app/js/selector_vidsize.js, app/js/setting_dis_vidsize.js, app/pages/settings.html

--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -58,7 +58,11 @@
           ></label>
 
           <!-- <label for="video-size-select">Select Size:</label> -->
-          <select id="video-size-select" title="Select video resolution">
+          <select
+            id="video-size-select"
+            title="Select video resolution"
+            onchange="updateVideoResolution()"
+          >
             <option value="1920x1080">1920x1080 (Full HD)</option>
             <option value="1280x720">1280x720 (HD)</option>
             <option value="640x480" selected>640x480 (VGA)</option>
