Update: app/js/main_start_cam.js, app/js/setting_dis_vidsize.js, app/pages/mode.html

--- a/app/pages/mode.html
+++ b/app/pages/mode.html
@@ -58,6 +58,25 @@
             Folder
           </button>
         </div>
+
+        <!-- Grade Detection Settings -->
+        <div class="mode-row">
+          <label for="grade-switch" title="Detects grades."
+            >Grade Detection</label
+          >
+          <label class="switch">
+            <input
+              type="checkbox"
+              id="grade-switch"
+              title="Toggle grade detection"
+              placeholder="Toggle grade detection"
+              onclick="toggleGradeDetection()"
+            />
+            <span class="slider"></span>
+          </label>
+        </div>
+
+        <!-- More Detection Settings -->
       </div>
     </div>
   </div>
