Update: app/css/styles_main.css, app/js/detect_grade.js, app/js/detect_grade_processing.js, app/js/detect_loop.js, app/js/detect_text_processing.js, app/js/include_html.js, app/js/include_html0.js, app/js/init_system.js, app/pages/grade.html, index.html, resources/exam/exam0.jpg

--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
         style="display: none; padding: 0"
       ></div>
 
+      <!-- include grade.html  -->
+      <div
+        class="group-frame-grade"
+        id="group-frame-grade"
+        include-html="app/pages/grade.html"
+        style="display: none; padding: 0"
+      ></div>
+
       <!-- include status.html  -->
       <div
         class="group-frame-status"
@@ -388,8 +396,10 @@
     <script src="app/js/detect.js"></script>
     <script src="app/js/setting.js"></script>
     <script src="app/js/gemini.js"></script>
-    <script src="app/js/detect_image_processing.js"></script>
+    <script src="app/js/detect_text_processing.js"></script>
+    <script src="app/js/detect_grade_processing.js"></script>
     <script src="app/js/detect_text.js"></script>
+    <script src="app/js/detect_grade.js"></script>
     <script src="app/js/detect_object.js"></script>
     <script src="app/js/detect_motion.js"></script>
     <script src="app/js/detect_sound.js"></script>
