Update: app/js/detect_grade.js, app/js/detect_grade_processing.js, app/pages/grade.html

--- a/app/pages/grade.html
+++ b/app/pages/grade.html
@@ -12,6 +12,16 @@
         style="width: 100%; box-sizing: border-box"
       ></textarea>
 
+      <textarea
+        id="grades-input1"
+        class="grades-input"
+        contenteditable="true"
+        spellcheck="true"
+        rows="1"
+        placeholder="Detected grades..."
+        style="width: 100%; box-sizing: border-box"
+      ></textarea>
+
       <!-- Row 1: Status -->
 
       <!-- Row 2: Buttons -->
