--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
     <script src="app/js/gemini.js"></script>
     <script src="app/js/detect_text_processing.js"></script>
     <script src="app/js/detect_grade_processing.js"></script>
+    <script src="app/js/detect_grade_processing1.js"></script>
     <script src="app/js/detect_text.js"></script>
     <script src="app/js/detect_grade.js"></script>
     <script src="app/js/detect_object.js"></script>
