Update: app/js/detect_loop.js, app/js/detect_text.js, app/pages/text.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -12,6 +12,16 @@
         style="width: 100%; box-sizing: border-box"
       ></textarea>
 
+      <textarea
+        id="texts-input1"
+        class="texts-input"
+        contenteditable="true"
+        spellcheck="true"
+        rows="1"
+        placeholder="Detected texts..."
+        style="width: 100%; box-sizing: border-box"
+      ></textarea>
+
       <!-- // Row 1: Status -->
       <div class="dropdown" id="language-dropdown">
         <div class="dropdown-select" onclick="toggleDropdownLanguages()">
