Update: app/js/init_system.js, index.html

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
           <!-- Status selection -->
           <span class="status-mode-text" id="status-mode-text">Status</span>
+
           <label class="switch" for="status-switch">
             <input
               type="checkbox"
@@ -182,6 +183,9 @@
 
       <!-- video feed -->
       <div class="status" id="status">Initializing...</div>
+      <div class="status" id="debug1"></div>
+      <div class="status" id="debug2"></div>
+
       <div class="video-section">
         <div class="video-feed" id="video-feed">
           <!-- <div id="video-feed"> -->
