Update: app/js/init_system.js, index.html

--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
 
       <!-- video feed -->
       <div class="status" id="status">Initializing...</div>
-      <div class="status" id="debug1"></div>
-      <div class="status" id="debug2"></div>
+      <div class="status" id="debug"></div>
 
       <div class="video-section">
         <div class="video-feed" id="video-feed">
