Update: app/js/detect_loop.js, app/js/init_system.js, app/js/selector_source.js, app/pages/grade.html, app/pages/object.html, index.html

--- a/app/pages/grade.html
+++ b/app/pages/grade.html
@@ -4,7 +4,7 @@
       <!-- input for detected grades -->
       <textarea
         id="grades-input"
-        class="grades-input"
+        class="texts-input"
         contenteditable="true"
         spellcheck="true"
         rows="2"
@@ -14,7 +14,7 @@
 
       <textarea
         id="grades-input1"
-        class="grades-input"
+        class="texts-input"
         contenteditable="true"
         spellcheck="true"
         rows="1"
