--- a/app/pages/object.html
+++ b/app/pages/object.html
@@ -25,6 +25,22 @@
         </button>
       </div>
 
+      <textarea
+        id="obj-detect-input"
+        class="texts-input"
+        rows="1"
+        placeholder="Not Detected"
+        style="width: 100%; box-sizing: border-box"
+      ></textarea>
+
+      <textarea
+        id="obj-alert-input"
+        class="texts-input"
+        rows="1"
+        placeholder="Not Alert"
+        style="width: 100%; box-sizing: border-box"
+      ></textarea>
+
       <!-- // Output area for detected objects -->
     </div>
   </div>
