Update: app/js/command.js, app/js/detect_fire.js, app/js/detect_grade.js, app/js/detect_text.js, app/js/main_start.js, app/js/selector_source.js, app/pages/mode.html, app/pages/source.html

--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -9,8 +9,8 @@
           <option value="camera_ip">IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
           <option value="video" selected>Video (file)</option>
-          <option value="image">Image (file)</option>
-          <!-- <option value="folder">Folder</option> -->
+          <option value="image_file">Image (file)</option>
+          <option value="image_folder">Image (folder)</option>
         </select>
       </label>
 
@@ -19,7 +19,7 @@
         class="button-browse"
         disabled="true"
         type="button"
-        onclick="browseFile()"
+        onclick="browseButton()"
       >
         Browse
       </button>
