Update: app/js/detect_loop.js, app/js/selector_object.js, app/pages/object.html

--- a/app/pages/object.html
+++ b/app/pages/object.html
@@ -19,11 +19,11 @@
       </div>
 
       <!-- Row 2 -->
-      <div class="row-object">
+      <!-- <div class="row-object">
         <button id="btn-detect-object" type="button" onclick="detectobjects()">
           Detect
         </button>
-      </div>
+      </div> -->
 
       <textarea
         id="obj-detect-input"
