--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -8,8 +8,8 @@
           <option value="camera_usb">USB Camera (external)</option>
           <option value="camera_ip">IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
-          <option value="video" selected>Video (file)</option>
-          <option value="image_file">Image (file)</option>
+          <option value="video">Video (file)</option>
+          <option value="image_file" selected>Image (file)</option>
           <option value="image_folder">Image (folder)</option>
         </select>
       </label>
