--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
     <script src="app/js/main_visitor.js"></script>
     <script src="app/js/detect.js"></script>
     <script src="app/js/setting.js"></script>
+    <script src="app/js/detect_image_processing_basic.js"></script>
+    <script src="app/js/detect_image_processing_adv.js"></script>
     <script src="app/js/detect_text_processing.js"></script>
     <script src="app/js/detect_grade_processing.js"></script>
     <script src="app/js/detect_grade_processing1.js"></script>
