Update: app/css/bootstrap.min.css, app/js/script_bootstrap_min.js, app/js/script_jquery_min.js, index.html

--- a/index.html
+++ b/index.html
@@ -14,43 +14,24 @@
 
     <!-- Add CSS styles -->
     <link rel="stylesheet" href="app/css/styles_main.css" />
-
-    <!-- // iOS support -->
-    <!-- <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-icon" href="app/img/icon.png"> -->
-
-    <!-- // Add manifest for PWA -->
-    <link rel="manifest" href="manifest.webmanifest" />
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-
-    <!-- Bootstrap JS -->
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="app/css/bootstrap.min.css" />
 
     <!-- TensorFlow.js and COCO-SSD -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.18.0/dist/tf.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.1/dist/tesseract.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script> -->
-    <!-- https://docs.opencv.org/4.x/opencv.js -->
+    <!-- "https://docs.opencv.org/4.x/opencv.js" -->
+    <!-- "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" -->
+    <!-- "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" -->
+    <!-- "https://code.jquery.com/jquery-3.3.1.min.js" -->
     <script src="app/js/script_tf_min.js"></script>
     <script src="app/js/script_coco_ssd.js"></script>
     <script src="app/js/script_tesseract.js"></script>
     <script src="app/js/script_xlsx_min.js"></script>
     <script src="app/js/script_opencv.js"></script>
+    <script src="app/js/script_bootstrap_min.js"></script>
+    <script src="app/js/script_jquery_min.js"></script>
   </head>
 
   <body>
