Update: app/css/styles_bootstrap_min.css, index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Add CSS styles -->
     <link rel="stylesheet" href="app/css/styles_main.css" />
-    <link rel="stylesheet" href="app/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="app/css/styles_bootstrap_min.css" />
 
     <!-- TensorFlow.js and COCO-SSD -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.18.0/dist/tf.min.js"></script> -->
