Update: app/css/styles_main.css, app/pages/help.html

--- a/app/pages/help.html
+++ b/app/pages/help.html
@@ -2,11 +2,8 @@
   <h2>Help</h2>
   <hr />
 
-  <h3>
-    IP Camera Setup
-    <h4>(use Mobile Phone as IP Camera)</h4>
-  </h3>
-
+  <h3>IP Camera Setup</h3>
+  <h4>(use Mobile Phone as IP Camera)</h4>
   <ol>
     <li>
       Install an IP camera app (e.g., <b>IP Webcam</b>, <b>DroidCam</b> for
