Update: app/css/styles_main.css, app/css/styles_media.css, index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Add CSS styles -->
     <link rel="stylesheet" href="app/css/styles_main.css" />
+    <link rel="stylesheet" href="app/css/styles_media.css" />
     <link rel="stylesheet" href="app/css/styles_bootstrap_min.css" />
 
     <!-- TensorFlow.js and COCO-SSD -->
@@ -218,7 +219,6 @@
           class="button-command"
           onclick="showCommand()"
           id="btn-command"
-          style="max-width: 65%"
           type="button"
           disabled="true"
         >
@@ -228,7 +228,6 @@
           class="button-voice"
           onclick="showVoice()"
           id="btn-voice"
-          style="max-width: 65%"
           type="button"
           disabled="true"
         >
@@ -238,7 +237,6 @@
           class="button-detect"
           onclick="showDetect()"
           id="btn-detect"
-          style="max-width: 65%"
           type="button"
           disabled="true"
         >
@@ -248,7 +246,6 @@
           class="button-settings"
           onclick="showSettings()"
           id="btn-settings"
-          style="max-width: 65%"
           type="button"
           disabled="true"
         >
