--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -4,11 +4,11 @@
       <label for="video-source">
         <select id="video-source" disabled="true" title="Select video source">
           <!-- <option value="camera" selected>Camera (default)</option> -->
-          <option value="camera" selected>Camera (default)</option>
+          <option value="camera">Camera (default)</option>
           <option value="camera_usb">USB Camera (external)</option>
           <option value="camera_ip">IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
-          <option value="video">Video (file)</option>
+          <option value="video" selected>Video (file)</option>
           <!-- <option value="image_file" selected>Image (file)</option> -->
           <!-- <option value="image_folder">Image (folder)</option> -->
         </select>
