Update: app/js/detect_text.js, app/js/detect_text_doc.js, app/pages/source.html, app/pages/text.html, index.html, resources/xlsx/OpenLens.xlsx, resources/xlsx/OpenLens1.xlsx

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -68,6 +68,9 @@
         >
           Spreadsheet
         </button>
+        <button id="btn-xlsx-text" type="button" onclick="browseXLSXFile()">
+          Browse
+        </button>
       </div>
 
       <!-- Row 1: Language select -->
