--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
     <script src="app/js/detect_image_processing_basic.js"></script>
     <script src="app/js/detect_image_processing_adv.js"></script>
     <script src="app/js/detect_text_processing.js"></script>
+    <script src="app/js/detect_text_doc.js"></script>
     <script src="app/js/detect_grade_processing.js"></script>
     <script src="app/js/detect_grade_processing1.js"></script>
     <script src="app/js/detect_text.js"></script>
