Update: app/js/detect_text_doc.js, app/pages/text.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -71,6 +71,10 @@
         <button id="btn-xlsx-text" type="button" onclick="browseXLSXFile()">
           Browse
         </button>
+
+        <button id="btn-xlsx-add" type="button" onclick="addTextToXLSX()">
+          Add
+        </button>
       </div>
 
       <!-- Row 1: Language select -->
