Update: app/js/script_face_detection.js, app/js/script_pose_detection.js, index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     <!-- "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" -->
     <!-- "https://code.jquery.com/jquery-3.3.1.min.js" -->
 
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/blazeface"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix"></script> -->
+
     <script src="app/js/script_tf_min.js"></script>
     <script src="app/js/script_coco_ssd.js"></script>
+    <!-- <script src="app/js/script_face_detection.js"></script> -->
+    <!-- <script src="app/js/script_pose_detection.js"></script> -->
     <script src="app/js/script_tesseract.js"></script>
     <script src="app/js/script_xlsx_min.js"></script>
     <script src="app/js/script_opencv.js"></script>
