Update: app/js/detect_face.js, app/js/detect_loop.js, app/js/detect_pose.js, app/js/include_html.js, app/js/init_system.js, app/js/script_face_detection.js, app/js/script_pose_detection.js, app/js/selector_object.js, index.html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <script src="app/js/script_tf_min.js"></script>
     <script src="app/js/script_coco_ssd.js"></script>
-    <!-- <script src="app/js/script_face_detection.js"></script> -->
-    <!-- <script src="app/js/script_pose_detection.js"></script> -->
+    <script src="app/js/script_pose_detection.js"></script>
+    <script src="app/js/script_face_detection.js"></script>
     <script src="app/js/script_tesseract.js"></script>
     <script src="app/js/script_xlsx_min.js"></script>
     <script src="app/js/script_opencv.js"></script>
@@ -383,6 +383,8 @@
     <script src="app/js/detect_text.js"></script>
     <script src="app/js/detect_grade.js"></script>
     <script src="app/js/detect_object.js"></script>
+    <script src="app/js/detect_pose.js"></script>
+    <script src="app/js/detect_face.js"></script>
     <script src="app/js/detect_motion.js"></script>
     <script src="app/js/detect_sound.js"></script>
     <script src="app/js/detect_smoke.js"></script>
