--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -9,8 +9,8 @@
           <option value="camera_ip">IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
           <option value="video">Video (file)</option>
-          <option value="image_file" selected>Image (file)</option>
-          <option value="image_folder">Image (folder)</option>
+          <option value="image_file">Image (file)</option>
+          <option value="image_folder" selected>Image (folder)</option>
         </select>
       </label>
 
