Update: app/js/detect_loop.js, app/js/detect_text.js, app/pages/text.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -75,6 +75,13 @@
         <button id="btn-xlsx-add" type="button" onclick="addTextToXLSX()">
           Add
         </button>
+        <!-- <button
+          id="btn-folder-all"
+          type="button"
+          onclick="processAllImagesInFolder()"
+        >
+          All
+        </button> -->
       </div>
 
       <!-- Row 1: Language select -->
